<?xml version="1.0"?>
<package format="2">
  <name>tbai_mpc_blind</name>
  <version>0.0.0</version>
  <description>The tbai_mpc_blind package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tbai_mpc</depend>
  <depend>tbai_core</depend>
  <depend>tbai_msgs</depend>
  <depend>tbai_static</depend>
  <depend>teleop_twist_keyboard</depend>

  <export>
  </export>
</package>